--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
                 </nav>
                 <h2> h2 tag</h2>
             <h1>Hello github</h1>
+
+            <div class="footer">
+                footer
+            </div>
             </body>
     </html>
